# sctmgtool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/sctmgtool/: __init__.py  __main__.py  base.py  cache.py  hooks.py  tk.py  tools.py
src/sctmgtool/units/: NOTICE.txt  __init__.py  protoss.py  terran.py  zerg.py
tests/: conftest.py  test_base.py  test_roll.py  test_tools.py
