[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "sctmgtool.__version__"}

[project]
name = "sctmgtool"
description = "A combat analysis tool for StarCraft: Tabletop Miniatures Game"
authors = [
  { name="Łukasz Gieryk", email="108897150+lgieryk@users.noreply.github.com" },
]
license = "MIT"
license-files = ["LICENSE", "src/sctmgtool/units/NOTICE.txt"]
dynamic = ["version"]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "matplotlib",
    "numpy",
    "platformdirs",
    "customtkinter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/lgieryk/sctmgtool"

[tool.ruff]
line-length = 160
